--- a/src/style/config.css
+++ b/src/style/config.css
@@ -14,8 +14,9 @@
   --primary-color: lch(50% 61 287);
   --primary-color-light: lch(80% 61 287);
   --primary-color-light-bg: lch(50% 61 287 / 0.1);
-  --primary-color-dark-bg: lch(50% 61 287 / 0.4);
+  --primary-color-dark-bg: lch(40% 61 287 / 0.4);
   --primary-color-strong: lch(40% 61 287);
+  --primary-color-dark: lch(30% 61 287);
 
   --golden-color: lch(84% 57 79);
   --golden-color-light: lch(95% 57 79);
